Updated links to Github

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!-- 
-  Author: Callum-James Smith (sudo-make)
+  Author: Callum-James Smith (SilenceOfTheLambdas)
   Date Created: 20-11-2019
-  Last Updated: 23-01-2021
+  Last Updated: 12-08-2021
  -->
 <!DOCTYPE html>
 <html class="no-js" lang="en">
@@ -80,7 +80,7 @@
                 <span>LinkedIn Profile</span>
               </button>
               <button type="button" class="btn btn-light btn-social">
-                <a class="text-dark" href="https://github.com/sudo-make" aria-label="External link to my GitHub page"><i class="fa fa-github" aria-hidden="true"></i></a>
+                <a class="text-dark" href="https://github.com/SilenceOfTheLambdas" aria-label="External link to my GitHub page"><i class="fa fa-github" aria-hidden="true"></i></a>
                 <span>GitHub Profile</span>
               </button>
             </div>
@@ -138,7 +138,7 @@
               </div>
               <div class="folder-item__details">
                 <div class="folder-item__details__name">
-                  <a href="https://github.com/sudo-make/Capstone-Project">University Capstone Project</a>
+                  <a href="https://github.com/SilenceOfTheLambdas/Capstone-Project">University Capstone Project</a>
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#ecc31c" stroke-widt class="feather feather-star">
                     <polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon>
                   </svg>
@@ -178,7 +178,7 @@
               </div>
               <div class="folder-item__details">
                 <div class="folder-item__details__name">
-                  <a href="https://github.com/sudo-make/micro-rpg">Micro RPG</a>
+                  <a href="https://github.com/SilenceOfTheLambdas/micro-rpg">Micro RPG</a>
                 </div>
                 <div class="folder-item__details__date">A 2D rougelike game I'm currently working on; again, made using Unity3D. ;)</div>
               </div>
@@ -191,7 +191,7 @@
               </div>
               <div class="folder-item__details">
                 <div class="folder-item__details__name">
-                  <a href="https://github.com/sudo-make/Nihil---Game">Nihil</a>
+                  <a href="https://github.com/SilenceOfTheLambdas/Nihil---Game">Nihil</a>
                 </div>
                 <div class="folder-item__details__date">
                   A 3D horror game made using Unity3D
@@ -205,7 +205,7 @@
               </div>
               <div class="folder-item__details">
                 <div class="folder-item__details__name">
-                  <a href="https://github.com/sudo-make/Global-Game-Jam-2019---Memories">Global Game Jam 2019</a>
+                  <a href="https://github.com/SilenceOfTheLambdas/Global-Game-Jam-2019---Memories">Global Game Jam 2019</a>
                 </div>
                 <div class="folder-item__details__date">
                   My submission to the 2019 Global Game Jam event. This was also make in Unity3D; and was a team effort.
@@ -226,7 +226,7 @@
               </div>
               <div class="folder-item__details">
                 <div class="folder-item__details__name">
-                  <a href="https://github.com/sudo-make/Java-Game-CE203-A2-">2D Java "Bejeweled" clone</a>
+                  <a href="https://github.com/SilenceOfTheLambdas/Java-Game-CE203-A2-">2D Java "Bejeweled" clone</a>
                 </div>
                 <div class="folder-item__details__date">
                   This is a 2D game made using Java swing; as part of an assignment in my 2nd year at university.
@@ -262,7 +262,7 @@
               </div>
               <div class="folder-item__details">
                 <div class="folder-item__details__name">
-                  <a href="https://github.com/sudo-make/Portfolio-Website">Portfolio Website</a>
+                  <a href="https://github.com/SilenceOfTheLambdas/Portfolio-Website">Portfolio Website</a>
                 </div>
                 <div class="folder-item__details__date">
                   If your seeing this; then you already know all about it :) This website was created using Bootstrap, JQuery, SCSS, PHP and HTML5
