Removed GULP NPM etc, also added new projects and fixed links

--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
                 </svg>
               </button>
               <div class="folder-summary__file-count" id="js_folder-summary-amount">
-                <span class="folder-summary__file-count__amount">6</span>
+                <span class="folder-summary__file-count__amount">7</span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="currentColor" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-folder">
                   <path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path>
                 </svg>
@@ -129,8 +129,23 @@
                 <path d="M6 12c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3zm9 0c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3zm9 0c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3z" /></svg>
             </div>
           </div>
-
           <ul class="folder-content" id="js_folder-content">
+            <!-- Micro RPG -->
+            <li class="folder-item js_folder-item">
+              <div class="folder-item__icon">
+                <svg width="2433" height="2500" viewBox="0 0 256 263" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMinYMin meet">
+                  <path d="M166.872 131.237l45.91-79.275 22.184 79.275-22.185 79.256-45.909-79.256zm-22.376 12.874l45.916 79.262-79.966-20.486-57.77-58.776h91.82zm45.906-105.033l-45.906 79.275h-91.82l57.77-58.78 79.956-20.495zm65.539 65.18L227.933.06l-104.54 27.925-15.475 27.207-31.401-.225L0 131.244l76.517 76.259h.003l31.388-.232 15.497 27.207 104.528 27.92L255.94 158.22l-15.906-26.982 15.906-26.978z" fill="#222C37" /></svg>
+              </div>
+              <div class="folder-item__details">
+                <div class="folder-item__details__name">
+                  <a href="https://github.com/SilenceOfTheLambdas/micro-rpg">Micro RPG</a>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#ecc31c" stroke-widt class="feather feather-star">
+                    <polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon>
+                  </svg>
+                </div>
+                <div class="folder-item__details__date">A 2D rougelike game I'm currently working on; again, made using Unity3D. ;)</div>
+              </div>
+            </li>
             <!-- Capstone Project -->
             <li class="folder-item js_folder-item">
               <div class="folder-item__icon">
@@ -139,9 +154,6 @@
               <div class="folder-item__details">
                 <div class="folder-item__details__name">
                   <a href="https://github.com/SilenceOfTheLambdas/Capstone-Project">University Capstone Project</a>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#ecc31c" stroke-widt class="feather feather-star">
-                    <polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon>
-                  </svg>
                 </div>
                 <div class="folder-item__details__date">A 2D A-RPG game being created using MonoGame; for my 3rd year capstone project.</div>
               </div>
@@ -170,17 +182,16 @@
                 <div class="folder-item__details__date">A Realistic FPS survival game made with Unity 2018</div>
               </div>
             </li>
-            <!-- Micro RPG -->
+            <!-- Lost and Not Found -->
             <li class="folder-item js_folder-item">
               <div class="folder-item__icon">
-                <svg width="2433" height="2500" viewBox="0 0 256 263" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMinYMin meet">
-                  <path d="M166.872 131.237l45.91-79.275 22.184 79.275-22.185 79.256-45.909-79.256zm-22.376 12.874l45.916 79.262-79.966-20.486-57.77-58.776h91.82zm45.906-105.033l-45.906 79.275h-91.82l57.77-58.78 79.956-20.495zm65.539 65.18L227.933.06l-104.54 27.925-15.475 27.207-31.401-.225L0 131.244l76.517 76.259h.003l31.388-.232 15.497 27.207 104.528 27.92L255.94 158.22l-15.906-26.982 15.906-26.978z" fill="#222C37" /></svg>
+                <img src="images/UE_Logo_icon-only_black.svg" alt="The logo for Unreal Engine" style="width: 40px; height: 40px;">
               </div>
               <div class="folder-item__details">
                 <div class="folder-item__details__name">
-                  <a href="https://github.com/SilenceOfTheLambdas/micro-rpg">Micro RPG</a>
+                  <a href="https://github.com/SilenceOfTheLambdas/Lost-and-Not-Found---GGJ2021">Lost and Not Found</a>
                 </div>
-                <div class="folder-item__details__date">A 2D rougelike game I'm currently working on; again, made using Unity3D. ;)</div>
+                <div class="folder-item__details__date">A simple maze game created using Unreal Engine 4 as part of Global Game Jam 2021</div>
               </div>
             </li>
             <!-- Nihil -->
@@ -201,7 +212,7 @@
             <!-- Global Game Jam 2019 -->
             <li class="folder-item js_folder-item">
               <div class="folder-item__icon">
-                <img src="images/GGJ00-RoundLogo-900x900.png" alt="The logo for Global Game Jam" style="width: 40px; height: 40px;">
+                <img src="images/GGJ_logo.png" alt="The logo for Global Game Jam" style="width: 40px; height: 40px;">
               </div>
               <div class="folder-item__details">
                 <div class="folder-item__details__name">
