Updated personal information

--- a/src/index.html
+++ b/src/index.html
@@ -304,7 +304,7 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title">Hey!</h5>
-                  <p class="card-text">Game Developer and Msc student at Newcastle University.</p>
+                  <p class="card-text">Avid game developer</p>
                   <p class="small">I also love dragons! <i class="fas fa-dragon"></i></p>
                 </div>
               </div>
@@ -314,8 +314,7 @@
               <div class="card-body">
                 <div class="tab-content" id="myTabContent">
                   <div class="tab-pane fade show active" id="general" role="tabpanel" aria-labelledby="general-tab">
-                    My name is Callum-James Smith; I am a masters student at Newcastle University; studying Computer Game Engineering.
-                    I make games, create websites, and mess around with linux.
+                    My name is Callum-James Smith; I am a computer science graduate from the University of Essex, and a passionate game developer.
                   </div>
                 </div>
               </div> <!-- End of content in tabbed pane -->
