updated header info

--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,7 @@
         <div class="jumbotron demo">
           <div class="jumbo-info">
             <h1 class="display-4">Callum-James Smith</h1>
-            <p class="lead">Student <i class="fa fa-university" aria-hidden="true"></i> and Game Developer <i class="fa fa-gamepad" aria-hidden="true"></i></p>
+            <p class="lead">Comp. Science Grad <i class="fa fa-university" aria-hidden="true"></i> and Game Developer <i class="fa fa-gamepad" aria-hidden="true"></i></p>
             <div class="btn" aria-label="Social media links">
               <button type="button" class="btn btn-light btn-social">
                 <a class="text-dark" href="https://www.linkedin.com/in/callum-james-smith/" aria-label="External link to my LinkedIn"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
