updated project name

--- a/src/index.html
+++ b/src/index.html
@@ -138,12 +138,12 @@
               </div>
               <div class="folder-item__details">
                 <div class="folder-item__details__name">
-                  <a href="https://github.com/SilenceOfTheLambdas/micro-rpg">Micro RPG</a>
+                  <a href="https://github.com/SilenceOfTheLambdas/micro-rpg">Onyx</a>
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#ecc31c" stroke-widt class="feather feather-star">
                     <polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon>
                   </svg>
                 </div>
-                <div class="folder-item__details__date">A 2D rougelike game I'm currently working on; again, made using Unity3D. ;)</div>
+                <div class="folder-item__details__date">A 3D ARPG I am working on using Unity3D and URP</div>
               </div>
             </li>
             <!-- Capstone Project -->
@@ -155,7 +155,7 @@
                 <div class="folder-item__details__name">
                   <a href="https://github.com/SilenceOfTheLambdas/Capstone-Project">University Capstone Project</a>
                 </div>
-                <div class="folder-item__details__date">A 2D A-RPG game being created using MonoGame; for my 3rd year capstone project.</div>
+                <div class="folder-item__details__date">A 2D RPG game created using MonoGame; for my 3rd year capstone project.</div>
               </div>
             </li>
             <li class="folder-item js_folder-item">
