added play link to Outlier game

--- a/src/index.html
+++ b/src/index.html
@@ -190,7 +190,7 @@
                         <h5 class="card-title">Outlier (CE318 Assignment)</h5>
                         <p class="card-text">A 2D RPG game created using MonoGame; for my 3rd year capstone project.</p>
                         <a class="btn disabled btn-dark" href="https://github.com/SilenceOfTheLambdas/Capstone-Project" role="button"><i class="fab fa-github-alt"></i> Browse Source</a>
-                        <a class="btn btn-dark" href="https://developer.cloud.unity3d.com/share/share.html?shareId=ZJuWVHe2uv" role="button"><i class="fas fa-download"></i> Download</a>
+                        <a class="btn btn-dark" href="https://www.callum-jamessmith.com/Outlier.html" role="button"><i class="fas fa-play"></i> Play</a>
                       </div>
                     </div>
                   </div>
