fixed gramatical and spelling mistakes

--- a/src/index.html
+++ b/src/index.html
@@ -352,8 +352,9 @@
                   <h5 class="card-title">Hey!</h5>
                   <p class="card-text">
                     My name is Callum-James Smith. I am an avid gameplay programmer from Carlisle, England.
-                    I have expertise in developing gameplay systems, breaking down problems and finding the best and most straight forward solutions. I thrive in working with collabrotive teams, working with a varying team is a strong suit of mine.
-                    Helping my team and providing good quality code. I have worked with numerous game engines and frameworks, and worked in projects alonside. I also have some experience with 3D modelling in Blender, working with Audio, and QA.
+                    I have expertise in developing gameplay systems, breaking down problems and finding the best and most straight forward solutions.
+                    Furthermore, I thrive in working with collaborative teams, working with a varying team is a strong suit of mine. Helping my team and providing good quality code. I have worked with numerous game engines and frameworks, and worked in projects alongside.
+                    I also have some experience with 3D modelling in Blender, working with Audio, and QA.
                   </p>
                   <p class="small">I also love dragons! <i class="fas fa-dragon"></i></p>
                 </div>
